<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tituloPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:text="@string/tituloPrincipal"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="48sp" />

        <ImageView
            android:id="@+id/logoImagen"
            android:layout_width="600px"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo_crisis" />

        <Button
            android:id="@+id/btnJugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/boton_general"
            android:text="@string/btnJugar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnPuntuaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/boton_general"
            android:text="@string/btnPuntuaciones"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnInstrucciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/boton_general"
            android:text="@string/btnInstrucciones"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
